# url-shortener

./: .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/controllers/: RedirectController.hpp
backend/migrations/: 001_init.sql
backend/src/: main.cpp
backend/src/controllers/: HealthController.cpp  HealthController.hpp  RedirectController.cpp  ShortenController.cpp  ShortenController.hpp
backend/src/utils/: Base62.cpp  Base62.hpp
docs/: ARCHITECTURE.md
frontend/: index.html  nginx.conf  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: LinkRow.tsx  ShortenForm.tsx
